--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ a:hover {
 body {
   margin: 0;
   padding: 20px 0;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
   min-height: 100vh;
   display: block;
 }
